--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.5",
     "prop-types": "^15.6.2",
     "react-hot-loader": "^4.3.12",
+    "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
