--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-typescript": "^7.1.0",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.5",
